# test_app

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  dev.yaml  pyproject.toml
stripetest/: db.sqlite3  manage.py
stripetest/stripe_test_app/: admin.py  apps.py  middleware.py  models.py  serializers.py  urls.py  utils.py  views.py
stripetest/stripe_test_app/migrations/: 0001_initial.py
stripetest/stripe_test_app/templates/stripe_test_app/: item_detail.html  order_detail.html
stripetest/stripetest/: asgi.py  settings.py  urls.py  wsgi.py
